--- a/proposal/conclusion.tex
+++ b/proposal/conclusion.tex
@@ -4,6 +4,6 @@ I will test this by implementing and integrating several existing binary analysi
 Additionally, I intend to produce an analysis of which queries made against the forward fragment of \sysname\ will terminate.
 I will approach the termination analysis by attempting to write a formal proof of the property in the cases I can encompass.
 
-If work goes well, I intend to explore extensions to \sysname and more complex evaluation strategies as a stretch goal.
+If work goes well, I intend to explore extensions to \sysname\ and more complex evaluation strategies as a stretch goal.
 Specific extensions of interest are retraction and circumscription.
 For evaluation strategies, I am considering a tactics and ML-based approaches to evaluation.
