--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -11,7 +11,7 @@
 \usepackage{subfigure}
 \usepackage{enumitem}
 \usepackage[numbers,sort]{natbib}
-\usepackage[letterpaper,twoside,vscale=.8,hscale=.75,nomarginpar,hmarginratio=1:1]{geometry}
+\usepackage[letterpaper,twoside]{geometry}
 
 \draftstamp{\today}{DRAFT}
 
@@ -73,7 +73,7 @@ Manuel Egele, Boston University
 \input{related.tex}
 \chapter{Completed Work}
 \input{completed.tex}
-\chapter{\sysname}
+\chapter{Specifics}
 \input{holmes.tex}
 \chapter{Conclusion}
 \input{conclusion.tex}
