--- a/proposal/introduction.tex
+++ b/proposal/introduction.tex
@@ -98,21 +98,17 @@ I intend to examine this avenue of work if time allows after the main body of wo
 \section{Thesis}
 The logic language implemented in \sysname\ provides a new way of expressing and executing codependent, incremental, or expensive analyses which provide results to each other. \sysname programs can be reasoned about, are simpler to write than their directly integrated counterparts, and can provide better results by combining many analyses.
 \section{Timeline}
-I plan to complete my thesis before Aug 2016.\todo{Generalize my personal timeline}
+I plan to complete my thesis before Aug 2016.
 \begin{itemize}[label={}]
 \item {\bf Now-Apr 2015} Thesis Proposal
 %CCS (Resubmit BiTR unless I've gotten a _long_ way)
-\item {\bf May-Aug 2015} \sysname\ Basic feature complete (\S~\ref{sec:holmesBasic})
+\item {\bf May-Aug 2015} \sysname\ Basic feature complete (\S~\ref{sec:holmesBasic}), spec and proofs developed in tandem
 %NDSS (Use holmes to piggyback on Jonathan's inevitable resubmission of firmware systemwide paper?)
-\item {\bf Sep 2015} \sysname / BAP integration
-\item {\bf Oct 2015} CFG Recovery / VSA interleaving sample application
-\item {\bf Nov 2015}
-  \begin{itemize}
-  \item BiTR (Type Recovery) Port
-  \item Submission on incremental codependent analyses (Oakland target)
-  \end{itemize}
-\item {\bf Dec 2015 - Jan 2016} Work on termination and subsumption properties
-\item {\bf Feb 2016} Add fuzzing campaigns to test nonterminating analyses
+\item {\bf Sep 2015} VSA / CFG example
+\item {\bf Oct-Nov 2015} Combiners
+\item {\bf Dec 2015} BiTR (Type Recovery) Port
+\item {\bf Jan 2016} Backwards chaining
+\item {\bf Feb 2016} Revisit first two examples with backwards-chaining tracing
 \item {\bf March-May 2016} Explore stretch goals, such as circumscription and scheduling 
 \item {\bf May-Sep 2016} Thesis Writing
 \item {\bf Aug 2016} Defense
