Switched to numbered bibliography

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -80,7 +80,7 @@ Manuel Egele, Boston University
 
 \backmatter
 \renewcommand{\bibsection}{\chapter{\bibname}}
-\bibliographystyle{alphaurl}
+\bibliographystyle{plain}
 \bibliography{proposal,aux}
 
 \end{document}
